--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "storybook": "storybook start -p 7007"
   },
   "dependencies": {
     "@pusher/chatkit": "^0.7.12",
@@ -13,37 +14,121 @@
     "appcenter-analytics": "^1.4.0",
     "appcenter-crashes": "^1.4.0",
     "axios": "^0.18.0",
+    "browserify-zlib": "^0.1.4",
+    "dns.js": "^1.0.1",
+    "events": "^1.0.0",
     "firebase": "^5.0.3",
+    "https-browserify": "0.0.1",
     "native-base": "^2.4.2",
+    "process": "^0.11.0",
     "react": "16.3.0-alpha.1",
     "react-native": "0.54.3",
+    "react-native-app-intro": "^1.1.5",
     "react-native-app-link": "^1.0.0",
     "react-native-camera": "^1.1.4",
+    "react-native-crypto": "^2.1.2",
     "react-native-datepicker": "^1.7.2",
-    "react-native-game-engine": "^0.9.0",
     "react-native-gifted-chat": "^0.4.3",
+    "react-native-http": "github:tradle/react-native-http#834492d",
     "react-native-interactable": "^0.1.10",
+    "react-native-ionicons": "^4.4.6",
+    "react-native-level-fs": "^3.0.0",
     "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-modal": "^6.5.0",
+    "react-native-os": "^1.0.1",
+    "react-native-randombytes": "^3.5.1",
     "react-native-recording": "^0.4.1",
+    "react-native-screcorder": "^0.1.4",
     "react-native-screen-recorder": "^1.0.6",
+    "react-native-snap-carousel": "^3.7.4",
+    "react-native-swiper": "^1.5.13",
+    "react-native-tcp": "^3.2.1",
+    "react-native-udp": "^2.1.0",
+    "react-native-vector-icons": "^5.0.0",
     "react-native-voximplant": "^0.2.1",
     "react-navigation": "^2.0.1",
+    "react-navigation-backhandler": "^1.1.1",
     "react-redux": "^5.0.7",
+    "react-swipeable-views-native": "^0.12.9",
+    "react-swipeable-views-utils": "^0.12.17",
+    "readable-stream": "^1.0.33",
     "redux": "^4.0.0",
     "redux-axios-middleware": "^4.0.0",
     "stream": "0.0.2",
+    "stream-browserify": "^1.0.0",
     "survey-react": "^1.0.23",
     "tcomb-form-native": "^0.6.12",
+    "timers-browserify": "^1.0.1",
     "url": "^0.11.0"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^3.4.11",
+    "@storybook/addon-links": "^3.4.11",
+    "@storybook/addons": "^3.4.11",
+    "@storybook/react-native": "^3.4.11",
+    "babel-core": "^6.26.3",
     "babel-jest": "22.4.3",
     "babel-preset-react-native": "4.0.0",
+    "babel-runtime": "^6.26.0",
     "jest": "22.4.3",
-    "react-test-renderer": "16.3.0-alpha.1"
+    "prop-types": "^15.6.2",
+    "react-dom": "16.3.0-alpha.1",
+    "react-test-renderer": "16.3.0-alpha.1",
+    "rn-nodeify": "github:mvayngrib/rn-nodeify"
   },
   "jest": {
     "preset": "react-native"
+  },
+  "react-native": {
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "crypto": "react-native-crypto",
+    "dns": "dns.js",
+    "net": "react-native-tcp",
+    "domain": "domain-browser",
+    "http": "react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
+  },
+  "browser": {
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "crypto": "react-native-crypto",
+    "dns": "dns.js",
+    "net": "react-native-tcp",
+    "domain": "domain-browser",
+    "http": "react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
   }
 }
