--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,8 +2,12 @@
 
 buildscript {
     repositories {
-        jcenter()
         google()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
+        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.0'
@@ -16,6 +20,7 @@ buildscript {
 allprojects {
     repositories {
         mavenLocal()
+        google()
         jcenter()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
@@ -23,7 +28,7 @@ allprojects {
         }
         maven { url "https://jitpack.io" }
         maven { url "https://maven.google.com" }
-        google()
+        
     }
 }
  subprojects {
